gramatica_LSI-2024-1.txt
MAIN → STMT | FLIST| ε
FLIST → FDEF FLIST | FDEF
FDEF → def id(PARLIST){STMTLIST}
PARLIST → int id, PARLIST | int id | ε
STMT → int id; | ATRIBSTMT; | PRINTSTMT; | RETURNSTMT; | IFSTMT; | {STMTLIST} | ;
ATRIBSTMT → id = EXPR | id = FCALL
FCALL → id(PARLISTCALL)
PARLISTCALL → id, PARLISTCALL | id | ε
PRINTSTMT → print EXPR
RETURNSTMT → return
IFSTMT → if(EXPR) STMT else STMT | if(EXPR) STMT
STMTLIST → STMT STMTLIST | STMT
EXPR → NUMEXPR < NUMEXPR | NUMEXPR > NUMEXPR | NUMEXPR == NUMEXPR
NUMEXPR → NUMEXPR + TERM | NUMEXPR - TERM | TERM
TERM → TERM * FACTOR | FACTOR
FACTOR → num | (NUMEXPR) | id
